@@ -24,7 +24,7 @@
                       default to be chosen as "scxml".
                       This will cause the first transition
                       to state2 to be immediately followed. -->
-                 <send event="event2" />
+                 <send event="'event2'" />
            </onentry>
            <transition event="event2" target="state2"/>
            <transition event="event3" target="state3"/>
