@@ -25,49 +25,49 @@
          the state "seventy", then hop over and end up in "ninety" -->
     <state id="ten">
         <onentry>
-            <send event="ten.done" />
+            <send event="'ten.' + 'done'" />
         </onentry>
         <transition event="ten.done" target="twenty" />
     </state>
 
     <state id="twenty">
         <onentry>
-            <send event="twenty.done" targettype="'scxml'" />
+            <send event="'twenty.done'" targettype="'scxml'" />
         </onentry>
         <transition event="twenty.done" target="thirty" />
     </state>
 
     <state id="thirty">
         <onentry>
-            <send event="thirty.done" targettype="' sCxML  '" />
+            <send event="'thirty.done'" targettype="' sCxML  '" />
         </onentry>
         <transition event="thirty.done" target="forty" />
     </state>
 
     <state id="forty">
         <onentry>
-            <send event="forty.done" targettype=" " target=" " />
+            <send event="'forty.done'" targettype=" " target=" " />
         </onentry>
         <transition event="forty.done" target="fifty" />
     </state>
 
     <state id="fifty">
         <onentry>
-            <send event="fifty.done" target="'  '" />
+            <send event="'fifty.done'" target="'  '" />
         </onentry>
         <transition event="fifty.done" target="sixty" />
     </state>
 
     <state id="sixty">
         <onentry>
-            <send event="sixty.done" targettype="'scxml'" target=" " />
+            <send event="'sixty.done'" targettype="'scxml'" target=" " />
         </onentry>
         <transition event="sixty.done" target="seventy" />
     </state>
 
     <state id="seventy">
         <onentry>
-            <send event="seventy.done" targettype="'scxml'" target="'foo'" />
+            <send event="'seventy.done'" targettype="'scxml'" target="'foo'" />
         </onentry>
 
         <!-- This transition should not be followed since
